# home-server

./: .editorconfig  .gitignore  Makefile  README.md  ansible.cfg  pyproject.toml
images/: amazonlinux_2022.dockerfile  amazonlinux_2022.tag  amazonlinux_2023.dockerfile  amazonlinux_2023.tag  ubuntu18_04.dockerfile  ubuntu18_04.tag  ubuntu20_04.dockerfile  ubuntu20_04.tag  ubuntu22_04.dockerfile  ubuntu22_04.tag
playbooks/: bun-install.yml  ruby-install.yml  setup.yml
roles/bun/tasks/: bun-install.yml
roles/bun/vars/: RedHat.Amazon.2023.yml  main.yml
roles/docker/tasks/: docker-install.yml
roles/ruby/defaults/: main.yml
roles/ruby/tasks/: ruby-install.yml
roles/ruby/vars/: main.yml
roles/tests/molecule/bun-install/: converge.yml  molecule.yml
roles/tests/molecule/ruby-install/: converge.yml  create.yml  destroy.yml  molecule.yml
roles/utils/tasks/: docker-create-node.yml  docker-destroy-node.yml
scripts/: setup.sh  test.sh
