[tool.poetry]
name = "home-server"
version = "0.1.0"
description = ""
authors = ["Diegiwg <diegiwg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "2.32.4"
ansible-core = "2.16.14rc1"
molecule = "24.12.0"
molecule-plugins = "23.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
